--- a/index.html
+++ b/index.html
@@ -9,6 +9,48 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="sidebar">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="header">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="main-content">
+            <div class="projects-container">
+                <div class="section-header"></div>
+                <div class="project-item"></div>
+                <div class="project-item"></div>
+                <div class="project-item"></div>
+                <div class="project-item"></div>
+                <div class="project-item"></div>
+                <div class="project-item"></div>
+            </div>
+            <div class="main-content-right-container">
+                <div class="section-header"></div>
+                <div class="announcements"></div>
+                <div class="section-header"></div>
+                <div class="trending"></div>
+            </div>
+       </div>
+    </div>
 </body>
 </html>
