added padding and section headers

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="main-content">
             <div class="projects-container">
-                <div class="section-header"></div>
+                <div class="section-header">Your Projects</div>
                 <div class="project-item"></div>
                 <div class="project-item"></div>
                 <div class="project-item"></div>
@@ -122,9 +122,9 @@
                 <div class="project-item"></div>
             </div>
             <div class="main-content-right-container">
-                <div class="section-header"></div>
+                <div class="section-header">Announcements</div>
                 <div class="announcements"></div>
-                <div class="section-header"></div>
+                <div class="section-header">Trending</div>
                 <div class="trending"></div>
             </div>
        </div>
